# parachain

./: Cargo-complex.toml  Cargo.toml  PARACHAIN_REFACTOR_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  RUNTIME_INTEGRATION_COMPLETE.md  package-lock.json
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/business-management/: Cargo.toml
pallets/business-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/company-management/: Cargo.toml
pallets/company-management/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/encrypted-data/: Cargo.toml
pallets/encrypted-data/src/: lib.rs  mock.rs  tests.rs
pallets/external-integrations/: Cargo.toml
pallets/external-integrations/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/product-items/: Cargo.toml
pallets/product-items/src/: lib.rs  mock.rs  tests.rs
pallets/product-management/: Cargo.toml
pallets/product-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/role-permissions/: Cargo.toml
pallets/role-permissions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/secure-channel/: Cargo.toml
pallets/secure-channel/src/: lib.rs  mock.rs  tests.rs
pallets/security/: Cargo.toml
pallets/security/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/supply-chain-tracking/: Cargo.toml
pallets/supply-chain-tracking/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/user-management/: Cargo.toml
pallets/user-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
src/: company_management.rs  main.rs  product_management.rs  qr_code_system.rs  role_permissions.rs  supply_chain_tracking.rs  types.rs  user_management.rs
utils/: api-example.js  encryption-helpers.js  package.json
