[workspace.package]
license = "MIT"
authors = ["Supply Chain Team"]
homepage = "https://github.com/supply-chain/parachain"
repository = "https://github.com/supply-chain/parachain.git"
edition = "2021"

[workspace]
default-members = ["node", "runtime"]
members = [
    "node",
    "pallets/user-management",
    "pallets/company-management",
    "pallets/product-management",
    "pallets/supply-chain-tracking",
    "pallets/role-permissions",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# Local dependencies
supply-chain-runtime = { path = "./runtime", default-features = false }
pallet-user-management = { path = "./pallets/user-management", default-features = false }
pallet-company-management = { path = "./pallets/company-management", default-features = false }
pallet-product-management = { path = "./pallets/product-management", default-features = false }
pallet-supply-chain-tracking = { path = "./pallets/supply-chain-tracking", default-features = false }
pallet-role-permissions = { path = "./pallets/role-permissions", default-features = false }

# External dependencies
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "2503.0.1", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
frame = { version = "0.9.1", default-features = false, package = "polkadot-sdk-frame" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
