[package]
name = "supply-chain-node"
description = "A supply chain management parachain node built with Substrate and Cumulus"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
supply-chain-runtime = { workspace = true }
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"supply-chain-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"supply-chain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"supply-chain-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
