[package]
name = "supply-chain-runtime"
version = "0.1.0"
authors = ["Supply Chain Team"]
description = "Supply Chain Parachain Runtime"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [
	"derive",
] }
hex-literal = { version = "0.4.1" }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
serde = { features = ["derive"], workspace = true, optional = true, default-features = false }
smallvec = "1.11.0"

# Local
pallet-user-management = { path = "../pallets/user-management", default-features = false }
pallet-company-management = { path = "../pallets/company-management", default-features = false }
pallet-product-management = { path = "../pallets/product-management", default-features = false }
pallet-supply-chain-tracking = { path = "../pallets/supply-chain-tracking", default-features = false }
pallet-role-permissions = { path = "../pallets/role-permissions", default-features = false }
pallet-external-integrations = { path = "../pallets/external-integrations", default-features = false }
pallet-security = { path = "../pallets/security", default-features = false }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
pallet-aura = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false, features = ["serde"] }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false, features = ["serde"] }

# Polkadot
pallet-xcm = { workspace = true, default-features = false }
polkadot-parachain-primitives = { workspace = true, default-features = false, features = [
	"wasm-api",
] }
polkadot-runtime-common = { workspace = true, default-features = false }
staging-xcm = { workspace = true, default-features = false }
staging-xcm-builder = { workspace = true, default-features = false }
staging-xcm-executor = { workspace = true, default-features = false }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true, default-features = false }
cumulus-pallet-dmp-queue = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false, features = [
	"parameterized-consensus-hook",
] }
cumulus-pallet-session-benchmarking = { workspace = true, default-features = false }
cumulus-pallet-xcm = { workspace = true, default-features = false }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-utility = { workspace = true, default-features = false }
pallet-collator-selection = { workspace = true, default-features = false }
parachains-common = { workspace = true, default-features = false }
parachain-info = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"log/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-message-queue/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
	"substrate-wasm-builder",
	"pallet-user-management/std",
	"pallet-company-management/std",
	"pallet-product-management/std",
	"pallet-supply-chain-tracking/std",
	"pallet-role-permissions/std",
	"pallet-external-integrations/std",
	"pallet-security/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"staging-xcm-executor/runtime-benchmarks",
	"pallet-user-management/runtime-benchmarks",
	"pallet-company-management/runtime-benchmarks",
	"pallet-product-management/runtime-benchmarks",
	"pallet-supply-chain-tracking/runtime-benchmarks",
	"pallet-role-permissions/runtime-benchmarks",
	"pallet-external-integrations/runtime-benchmarks",
	"pallet-security/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
	"staging-xcm-executor/try-runtime",
	"pallet-user-management/try-runtime",
	"pallet-company-management/try-runtime",
	"pallet-product-management/try-runtime",
	"pallet-supply-chain-tracking/try-runtime",
	"pallet-role-permissions/try-runtime",
	"pallet-external-integrations/try-runtime",
	"pallet-security/try-runtime",
]