[package]
name = "pallet-encrypted-data"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Substrate
frame = { package = "polkadot-sdk-frame", version = "0.8.0", default-features = false, features = ["experimental", "runtime"] }
sp-runtime = { version = "39.0.2", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
