[package]
name = "pallet-user-management"
description = "FRAME pallet for user management in supply chain"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["derive"], workspace = true, optional = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"serde",
]
try-runtime = ["frame/try-runtime"]
